complete alura-one challenge project

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 </head>
 <body>
     <div>
-        <div class="logo"><img src="../public/imgs/Logo.png" alt="" srcset=""></div>
+        <div class="logo"><img src="./public/imgs/Logo.png" alt="" srcset=""></div>
         <main>
             <div>   
                 <textarea name="text" id="text" cols="30" rows="10">Digite seu texto</textarea>
                 <div class="buttons">
                     <div onclick="" class="warning">
-                        <img src="../public/imgs/Group.png" alt="" srcset="">
+                        <img src="./public/imgs/Group.png" alt="" srcset="">
                         <p style="color: #495057; margin-left: 8px;">Apenas letras minúsculas e sem acento.</p>
                     </div>
                     <button id="criptografar">Criptografar</button>
@@ -26,7 +26,7 @@
         <aside>
             <textarea class="result"></textarea>
             <div>
-                <img style="height: 250px; width: 250px;" src="../public/imgs/resultimage.png" alt="" srcset="">
+                <img style="height: 250px; width: 250px;" src="./public/imgs/resultimage.png" alt="" srcset="">
                 <h2>Nenhuma mensagem <br>encontrada</h2>
                 <p style="color: #495057; margin-top: 16px;">Digite um texto que você deseja <br>criptografar ou descriptografar.</p>
             </div>
